--- a/yumaatt/roles/package_ubuntu/defaults/main.yml
+++ b/yumaatt/roles/package_ubuntu/defaults/main.yml
@@ -22,6 +22,8 @@ packages_ubuntu:
   # for pipework
   - bridge-utils
   - arping
+  # for ansible-playbook
+  - sshpass
   # other
   - git
   - exuberant-ctags
