--- a/yumaatt/roles/docker/tasks/main.yml
+++ b/yumaatt/roles/docker/tasks/main.yml
@@ -10,4 +10,4 @@
   become: yes
 
 - name: install docker-compose
-  pip: name=docker-compose executable=~/.anyenv/envs/pyenv/shims/pip
+  pip: name=docker-compose chdir=~/ executable=~/.anyenv/envs/pyenv/shims/pip
