--- a/yumaatt/roles/evm/tasks/main.yml
+++ b/yumaatt/roles/evm/tasks/main.yml
@@ -8,40 +8,65 @@
   become_user: "{{ item.user }}"
   with_items: evm
 
-- name: evm directory
-  file: path=~/.evm/evm state=directory mode=0775
-  become: yes
-  become_user: "{{ item.user }}"
-  with_items: evm
+### install evm at user directory
+#- name: evm directory
+#  file: path=~/.evm/evm state=directory mode=0775
+#  become: yes
+#  become_user: "{{ item.user }}"
+#  with_items: evm
+#
+#- name: evm config path
+#  shell: |
+#    eval "$(~/.anyenv/bin/anyenv init -)"
+#    ~/.evm/bin/evm config path ~/.evm/evm
+#    executable=/bin/bash
+#    creates=~/.evm/.config
+#  changed_when: false
+#  become: yes
+#  become_user: "{{ item.user }}"
+#  with_items: evm
+#
+#- name: install emacs
+#  shell: |
+#    eval "$(~/.anyenv/bin/anyenv init -)"
+#    ~/.evm/bin/evm install emacs-{{ item.1 }}
+#    executable=/bin/bash
+#    creates=~/.evm/evm/emacs-{{ item.1 }}/bin/emacs
+#  changed_when: false
+#  become: yes
+#  become_user: "{{ item.0.user }}"
+#  with_subelements:
+#    - evm
+#    - emacs_versions
+#
+#- name: set emacs version
+#  shell: |
+#    eval "$(~/.anyenv/bin/anyenv init -)"
+#    ~/.evm/bin/evm use emacs-{{ item.emacs_version }}
+#    executable=/bin/bash
+#  changed_when: false
+#  become: yes
+#  become_user: "{{ item.user }}"
+#  with_items: evm
 
-- name: evm config path
-  shell: |
-    eval "$(~/.anyenv/bin/anyenv init -)"
-    ~/.evm/bin/evm config path ~/.evm/evm
-    executable=/bin/bash
-    creates=~/.evm/.config
-  changed_when: false
+### share evm with all users
+- name: evm directory
+  file: path=/usr/local/evm state=directory mode=0777
   become: yes
-  become_user: "{{ item.user }}"
-  with_items: evm
 
 - name: install emacs
   shell: |
     eval "$(~/.anyenv/bin/anyenv init -)"
-    ~/.evm/bin/evm install emacs-{{ item.1 }}
+    ~/.evm/bin/evm install emacs-{{ item }}
     executable=/bin/bash
-    creates=~/.evm/evm/emacs-{{ item.1 }}/bin/emacs
+    creates=/usr/local/evm/emacs-{{ item }}/bin/emacs
   changed_when: false
-  become: yes
-  become_user: "{{ item.0.user }}"
-  with_subelements:
-    - evm
-    - emacs_versions
+  with_items: evm_shared.emacs_versions
 
 - name: set emacs version
   shell: |
     eval "$(~/.anyenv/bin/anyenv init -)"
-    ~/.evm/bin/evm use emacs-{{ item.emacs_version }}
+    ~/.evm/bin/evm use emacs-{{ evm_shared.emacs_version }}
     executable=/bin/bash
   changed_when: false
   become: yes
