Add dev prod param settings

--- a/yumaatt/group_vars/test-development.yml
+++ b/yumaatt/group_vars/test-development.yml
@@ -38,8 +38,8 @@ group_goenv:
 group_ghq_repos:
   - user: docker
     repos:
-      - user: jpetazzo
-        repo: pipework
+      - user: yumaatt
+        repo: dotfiles
 
 group_evm:
   - user: docker
