--- a/yumaatt/roles/common/tasks/main.yml
+++ b/yumaatt/roles/common/tasks/main.yml
@@ -1,40 +1,13 @@
 - name: set fact
-  when: group_user_data is defined
   set_fact:
     user_data: "{{ user_data + group_user_data }}"
+  when: group_user_data is defined
 
-### timezone
-- name: check timezone
-  command: cat /etc/timezone
-  changed_when: false
-  always_run: yes
-  register: check_timezone
+#- name: Add the OS specific varibles
+#  include_vars: "{{ ansible_os_family }}.yml"
 
-- name: set timezone
-  copy: content={{ system_timezone }}
-        dest=/etc/timezone
-        owner=root
-        group=root
-        mode=0644
-  become: yes
-  when: check_timezone.stdout.find('{{ system_timezone }}') == -1 #'
-  notify:
-    - update_timezone
+- include: main_Debian.yml
+  when: "ansible_os_family == 'Debian'"
 
-### user
-- name: create user
-  user: name={{ item.user }} uid={{ item.uid }} shell={{ item.shell }}
-  become: yes
-  when: item.uid is defined
-  with_items: user_data
-
-- name: set user password
-  user: name={{ item.user }} password={{ item.password}}
-  become: yes
-  with_items: user_passwords
-
-- name: change default shell
-  user: name={{ item.user }} shell={{ item.shell }}
-  become: yes
-  when: item.uid is undefined
-  with_items: user_data
+- include: main_RedHat.yml
+  when: "ansible_os_family == 'RedHat'"
