--- a/yumaatt/roles/ntp/defaults/main.yml
+++ b/yumaatt/roles/ntp/defaults/main.yml
@@ -1,4 +1,4 @@
 ntp_servers:
-  - server ntp1.jst.mfeed.ad.jp
-  - server ntp2.jst.mfeed.ad.jp
-  - server ntp3.jst.mfeed.ad.jp
+  - ntp1.jst.mfeed.ad.jp
+  - ntp2.jst.mfeed.ad.jp
+  - ntp3.jst.mfeed.ad.jp
