--- a/yumaatt/site.yml
+++ b/yumaatt/site.yml
@@ -1,6 +1,7 @@
 - hosts:
     - admin-development-vagrant_ubuntu14
     - test
+    - phoply
   vars_files:
     - private_vars/{{app}}.yml
     - private_vars/{{app}}-{{stage}}.yml
@@ -21,6 +22,7 @@
 - hosts:
     - admin-development-vagrant_ubuntu14
     - test-development-test_ubuntu14
+    - phoply-development-phoply_dev1
   vars_files:
     - private_vars/{{app}}.yml
     - private_vars/{{app}}-{{stage}}.yml
