--- a/yumaatt/roles/common/tasks/main_Debian.yml
+++ b/yumaatt/roles/common/tasks/main_Debian.yml
@@ -26,8 +26,9 @@
     - create_user
 
 - name: set user password
-  user: name={{ item.user }} password={{ item.password}}
+  user: name={{ item.user }} password={{ item.password | password_hash('sha512') }}
   become: yes
+  changed_when: no
   with_items: user_passwords
   tags:
     - create_user
