--- a/yumaatt/roles/homebrew/tasks/main.yml
+++ b/yumaatt/roles/homebrew/tasks/main.yml
@@ -2,8 +2,8 @@
   homebrew_tap: tap="{{ item }}" state=present
   with_items: homebrew_taps
 
-- name: update homebrew
-  homebrew: update_homebrew=yes
+#- name: update homebrew
+#  homebrew: update_homebrew=yes
 
 - name: install homebrew packages
   homebrew: name="{{ item.name }}" state="{{ item.state|default('latest') }}" install_options="{{ item.install_options|default() }}"
@@ -13,6 +13,6 @@
   file: src=/usr/local/Cellar/texinfo/6.0/bin/makeinfo dest=/usr/local/bin/makeinfo state=link
   become: yes
 
-#- name: install homebrew cask packages
-#  homebrew_cask: name="{{ item }}" state=present
-#  with_items: homebrew_cask_packages
+# - name: install homebrew cask packages
+#   homebrew_cask: name="{{ item }}" state=present
+#   with_items: homebrew_cask_packages
