--- a/yumaatt/roles/aws/tasks/main.yml
+++ b/yumaatt/roles/aws/tasks/main.yml
@@ -6,5 +6,5 @@
   pip: name=awscli chdir=~/ executable=~/.anyenv/envs/pyenv/shims/pip
   become: yes
   become_user: "{{ item.user }}"
-  with_items: user_data
+  with_items: "{{ user_data }}"
   when: is_pip_installed.stat.exists
