--- a/yumaatt/roles/common/tasks/main_Debian.yml
+++ b/yumaatt/roles/common/tasks/main_Debian.yml
@@ -2,7 +2,7 @@
 - name: check timezone
   command: cat /etc/timezone
   changed_when: no
-  always_run: yes
+  check_mode: no
   register: check_timezone
 
 - name: set timezone
@@ -21,7 +21,7 @@
   user: name={{ item.user }} uid={{ item.uid }} shell={{ item.shell }}
   become: yes
   when: item.uid is defined
-  with_items: user_data
+  with_items: "{{ user_data }}"
   tags:
     - create_user
 
@@ -29,7 +29,7 @@
   user: name={{ item.user }} password={{ item.password | password_hash('sha512') }}
   become: yes
   changed_when: no
-  with_items: user_passwords
+  with_items: "{{ user_passwords }}"
   tags:
     - create_user
 
@@ -37,6 +37,6 @@
   user: name={{ item.user }} shell={{ item.shell }}
   become: yes
   when: item.uid is undefined
-  with_items: user_data
+  with_items: "{{ user_data }}"
   tags:
     - create_user
