--- a/yumaatt/roles/common_mac/tasks/main.yml
+++ b/yumaatt/roles/common_mac/tasks/main.yml
@@ -12,4 +12,4 @@
   command: chsh -s {{ item.shell }} {{ item.user }}
   become: yes
   changed_when: false
-  with_items: user_data
+  with_items: "{{ user_data }}"
