--- a/yumaatt/roles/homebrew/tasks/main.yml
+++ b/yumaatt/roles/homebrew/tasks/main.yml
@@ -1,13 +1,13 @@
 - name: install taps of homebrew
   homebrew_tap: tap="{{ item }}" state=present
-  with_items: homebrew_taps
+  with_items: "{{ homebrew_taps }}"
 
 #- name: update homebrew
 #  homebrew: update_homebrew=yes
 
 - name: install homebrew packages
   homebrew: name="{{ item.name }}" state="{{ item.state|default('latest') }}" install_options="{{ item.install_options|default() }}"
-  with_items: homebrew_packages
+  with_items: "{{ homebrew_packages }}"
 
 - name: create makeinfo symlink for emacs flycheck
   file: src=/usr/local/Cellar/texinfo/6.0/bin/makeinfo dest=/usr/local/bin/makeinfo state=link
@@ -15,4 +15,4 @@
 
 # - name: install homebrew cask packages
 #   homebrew_cask: name="{{ item }}" state=present
-#   with_items: homebrew_cask_packages
+#   with_items: "{{ homebrew_cask_packages }}"
