--- a/yumaatt/roles/package/tasks/main_RedHat.yml
+++ b/yumaatt/roles/package/tasks/main_RedHat.yml
@@ -26,7 +26,7 @@
 - name: check git version
   command: warn=no git --version
   changed_when: no
-  always_run: yes
+  check_mode: no
   register: git_version
 
 - name: yum remove git
@@ -38,9 +38,9 @@
   yum: name={{ item.name }} state={{ item.state }}
   become: yes
   changed_when: no
-  with_items: packages_rpm_RedHat
+  with_items: "{{ packages_rpm_RedHat }}"
 
 - name: yum install packages
   yum: name={{ item.name }} state={{ item.state }} enablerepo={{ item.enablerepo | default('base') }}
   become: yes
-  with_items: packages_RedHat
+  with_items: "{{ packages_RedHat }}"
