--- a/yumaatt/roles/tmux/tasks/main.yml
+++ b/yumaatt/roles/tmux/tasks/main.yml
@@ -12,4 +12,4 @@
   become: yes
   become_user: "{{ item.user }}"
   when: check_tmux.stat.exists and not check_tpm.stat.exists
-  with_items: user_data
+  with_items: "{{ user_data }}"
