--- a/yumaatt/roles/anyenv/tasks/main.yml
+++ b/yumaatt/roles/anyenv/tasks/main.yml
@@ -205,9 +205,9 @@
 - name: upgrade pip
   shell: |
     cd ~/
-    ~/.anyenv/envs/pyenv/shims/pip install –upgrade pip
+    ~/.anyenv/envs/pyenv/shims/pip install --upgrade pip
   register: result
-  changed_when: ‘”Requirement already up-to-date” not in result.stdout’
+  changed_when: '"Requirement already up-to-date" not in result.stdout'
   become: yes
   become_user: "{{ item.user }}"
   with_items: "{{ user_data }}"
