Add install python packages

--- a/yumaatt/group_vars/admin-development-mac.yml
+++ b/yumaatt/group_vars/admin-development-mac.yml
@@ -48,6 +48,12 @@ gems:
       - google-ime-skk
 
 # override
+python_packages:
+  - user: yuma.takahashi
+    package_list:
+      - passlib
+
+# override
 ghq_repos:
   - user: yuma.takahashi
     repos:
