--- a/yumaatt/roles/package/tasks/main_Debian.yml
+++ b/yumaatt/roles/package/tasks/main_Debian.yml
@@ -6,6 +6,7 @@
 - name: apt-get update
   apt: update_cache=yes
   become: yes
+  changed_when: no
 
 - name: apt-get install packages
   apt: pkg={{ item.name }} state={{ item.state }}
