--- a/yumaatt/roles/ntp/tasks/main.yml
+++ b/yumaatt/roles/ntp/tasks/main.yml
@@ -1,8 +1,1 @@
-#- name: Add the OS specific varibles
-#  include_vars: "{{ ansible_os_family }}.yml"
-
-- include: main_Debian.yml
-  when: "ansible_os_family == 'Debian'"
-
-- include: main_RedHat.yml
-  when: "ansible_os_family == 'RedHat'"
+- include: main_{{ ansible_os_family }}.yml
