--- a/yumaatt/roles/docker/tasks/main.yml
+++ b/yumaatt/roles/docker/tasks/main.yml
@@ -1,13 +1,1 @@
-- name: install docker
-  command: creates=/var/run/docker wget -qO- https://get.docker.com/ | sh
-
-- name: add user in docker group
-  user: name={{ ansible_ssh_user }} groups=docker append=yes
-  become: yes
-
-- name: cp pipework
-  command: creates=/usr/local/bin/pipework cp -p /home/{{ ansible_ssh_user }}/.ghq/github.com/jpetazzo/pipework/pipework /usr/local/bin/
-  become: yes
-
-- name: install docker-compose
-  pip: name=docker-compose chdir=~/ executable=~/.anyenv/envs/pyenv/shims/pip
+- include: main_{{ ansible_os_family }}.yml
