--- a/yumaatt/roles/homebrew/defaults/main.yml
+++ b/yumaatt/roles/homebrew/defaults/main.yml
@@ -7,7 +7,7 @@ homebrew_taps:
 
 homebrew_packages:
   - { name: ansible }
-  - { name: brew-cask }
+  #- { name: brew-cask }
   - { name: colordiff }
   - { name: xz }
   - { name: coreutils }
