--- a/yumaatt/roles/homebrew/tasks/main.yml
+++ b/yumaatt/roles/homebrew/tasks/main.yml
@@ -9,9 +9,9 @@
 #  homebrew: name="{{ item.name }}" state="{{ item.state|default('latest') }}" install_options="{{ item.install_options|default() }}"
 #  with_items: "{{ homebrew_packages }}"
 
-- name: create makeinfo symlink for emacs flycheck
-  file: src=/usr/local/Cellar/texinfo/6.5/bin/makeinfo dest=/usr/local/bin/makeinfo state=link
-  become: yes
+#- name: create makeinfo symlink for emacs flycheck
+#  file: src=/usr/local/Cellar/texinfo/6.5/bin/makeinfo dest=/usr/local/bin/makeinfo state=link
+#  become: yes
 
 # - name: install homebrew cask packages
 #   homebrew_cask: name="{{ item }}" state=present
